auto-test/tests/chapter_17/invalid_types/incomplete_types/void_array_in_param_type.c




int arr(void foo[3]) { return 3; }

int main(void) { return 0; }